KP-3721 Problems with Designer on IE9 : fixed questionnaire item text overflow
Former-commit-id: 7c071116f188fb2828501a80eaefe5f3e5064eef

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-question-list.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-question-list.css.less
@@ -128,7 +128,7 @@
       background-position: center -40px;
     }
 
-    > .text {
+    .item-text {
       overflow: hidden;
     }
 
